clusters/talos-cluster/audio-book-shelf/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: abs
  labels:
    pod-security.kubernetes.io/enforce: privileged
