clusters/talos-cluster/audio-book-shelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abs-deployment
  namespace: abs
  labels:
    app: abs-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: abs-deployment
  template:
    metadata:
      name: abs-deployment
      labels:
        app: abs-deployment
    spec:
      restartPolicy: Always
      containers:
        - name: abs
          image: ghcr.io/advplyr/audiobookshelf:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: abs
              protocol: TCP
          volumeMounts:
            - name: abs-config
              mountPath: /config
            - name: abs-metadata
              mountPath: /metadata
            - name: abs-media
              mountPath: /media
      volumes:
        - name: abs-config
          persistentVolumeClaim:
            claimName: abs-data
        - name: abs-metadata
          persistentVolumeClaim:
            claimName: abs-metadata
        - name: abs-media
          persistentVolumeClaim:
            claimName: abs-media
