clusters/talos-cluster/audio-book-shelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abs-service
  namespace: abs
spec:
  selector:
    app: abs-deployment
  ports:
    - name: abs
      protocol: TCP
      port: 13378
