clusters/talos-cluster/audio-book-shelf/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: abs-route
  namespace: abs
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "abs.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: abs-service
          port: 13378
